alterações para o perfil